Fixing double scroller (#2914)

--- a/UI/Web/src/app/nav/_components/grouped-typeahead/grouped-typeahead.component.scss
+++ b/UI/Web/src/app/nav/_components/grouped-typeahead/grouped-typeahead.component.scss
@@ -99,7 +99,7 @@ form {
 
 .dropdown {
     width: 100vw;
-    height: calc(100vh - 56px); //header offset
+    height: calc(var(--vh)*100 - 56px); //header offset
     background: var(--dropdown-overlay-color);
     position: fixed;
     justify-content: center;
